2005-09-01  Werner Koch  <wk@g10code.com>

	* gpgmsg.cpp (get_pgp_armor_type): New.
	(gatherAttachmentInfo):  Enhanced to detect text/plain pgp.
	(verify): Removed.
	(decrypt): Do clearsig verification here.

	* gpgmsg.cpp (decrypt): Kludge to workaround OL not updating a
	window.
	* msgcache.c (msgcache_get_from_mapi): New.
	* display.cpp (find_message_window): Don't use the GpgMsg function
	to to the string compare.
	* gpgmsg.cpp (matchesString): Removed.

	* msgcache.c (msgcache_set_active): Removed.
	(msgcache_get): Rewritten.
	(msgcache_put): Now uses PR_CONVERSATION_INDEX as key.  Update
	existing entries.

	* olflange.cpp (OnRead): Removed msgcache_set_active.
	(InstallCommands): Now uses the ConversationIndex to match the
	reply with the message.

2005-08-31  Werner Koch  <wk@g10code.com>

	* olflange.cpp (DllRegisterServer): Define a CLSID and set the
	ThreadingModel.

2005-08-30  Werner Koch  <wk@g10code.com>

	Renamed from "outlgpg" to "gpgol".

	More or less finished this major rewrite.

2005-08-26  Werner Koch  <wk@g10code.com>

	* MapiGPGME.cpp, MapiGPGME.h: Removed.
	* display.cpp, display.h: New. 

2005-08-23  Werner Koch  <wk@g10code.com>

	* msgcache.c, msgcache.h: New.

2005-08-22  Werner Koch  <wk@g10code.com>

	* olflange.cpp: Major cleanups and partly rewrites.

2005-08-18  Werner Koch  <wk@g10code.com>

	* gpgmsg.cpp, gpgmsg.hh: New.
	
2005-08-17  Werner Koch  <wk@g10code.com>

	* MapiGPGME.cpp (setMessageAccess): Removed as it was only used at
	one place.
	(setRTFBody): Use the above code here directly..
	(setWindow, setMessage): Removed.  We can't use that because there
	is only one instance of this class.
	(decrypt): Add args HWND and MSG.  Changed caller.
	(getBody): Changed to ..
	(get_body): .. plain function and add new arg MSG.  Changed all
	callers.
	(isHtmlMessage): Likewise changed to ..
	(is_html_message): .. plain function and add new arg MSG.
	(doCmd): Removed.

	* common.c (utf8_to_wchar): New.
